objects/Route_Processing_Sheet__c.object
<CustomObject>
    <description>Example digitization of the route processing sheet</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account DBA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Processing Sheets</relationshipLabel>
        <relationshipName>Route_Processing_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Drop__c</fullName>
        <label>(Depreciated) Actual Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Note_Count_Grand_Total__c</fullName>
        <description>Best guess</description>
        <formula>(X1_Note_Count_Grand_Total__c * 1) 
+ (X5_Note_Count_Grand_Total__c * 5) 
+ (X10_Note_Count_Grand_Total__c * 10)  
+ (X20_Note_Count_Grand_Total__c * 20) 
+ (X50_Note_Count_Grand_Total__c * 50) 
+ (X100_Note_Count_Grand_Total__c * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Best guess</inlineHelpText>
        <label>All Note Count Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BV_Drop_Total__c</fullName>
        <label>BV Drop Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BV_Value__c</fullName>
        <label>BV Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Return_Unused_Drop__c</fullName>
        <label>Cash Return Unused Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Return_Unused__c</fullName>
        <label>Cash Return Unused</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_100_Drop_Total__c</fullName>
        <formula>Cassette_100_Note_Count_Drop__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cassette $100 Drop Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_100_Note_Count_Drop__c</fullName>
        <label>Cassette $100 Note Count Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_100_Note_Count_Outbound__c</fullName>
        <label>$100 Note Count Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_100_Note_Count__c</fullName>
        <label>(Obsolete 29) Cassette $100 Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_100_Reject_Note_Count__c</fullName>
        <label>(Obsol30)Cassette $100 Reject Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_100_Total__c</fullName>
        <formula>/*(Cassette_100_Note_Count__c * 100) +  (Cassette_100_Reject_Note_Count__c * 100)*/
0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cassette $100 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Denomination__c</fullName>
        <label>Cassette 1 Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cassette_Denominations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cassette_1_Drop_Total__c</fullName>
        <formula>Cassette_1_Note_Count_Drop__c * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cassette $1 Drop Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Note_Count_Drop__c</fullName>
        <label>Cassette $1 Note Count Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Note_Count_Outbound__c</fullName>
        <label>$1 Note Count Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Note_Count__c</fullName>
        <label>Cassette 1 Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Reject_Note_Count__c</fullName>
        <label>Cassette 1 Reject Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Total__c</fullName>
        <formula>(Cassette_1_Note_Count__c * 1) +  (Cassette_1_Reject_Note_Count__c * 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cassette $1 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Value__c</fullName>
        <label>Cassette 1 Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_20_Drop_Total__c</fullName>
        <formula>Cassette_20_Note_Count_Drop__c * 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cassette $20 Drop Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_20_Note_Count_Drop__c</fullName>
        <label>Cassette $20 Note Count Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_20_Note_Count_Outbound__c</fullName>
        <label>$20 Note Count Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_20_Note_Count__c</fullName>
        <label>(Obsolete 25) Cassette $20 Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_20_Reject_Note_Count__c</fullName>
        <label>(Obsole26)Cassette $20 Reject Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_20_Total__c</fullName>
        <formula>(Cassette_20_Note_Count__c * 20) +  (Cassette_20_Reject_Note_Count__c * 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cassette $20 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_2_Denomination__c</fullName>
        <label>Cassette 2 Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cassette_Denominations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cassette_2_Value__c</fullName>
        <label>Cassette 2 Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cassette_3_Denomination__c</fullName>
        <label>Cassette 3 Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cassette_Denominations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cassette_3_Value__c</fullName>
        <label>Cassette 3 Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Bag_Number__c</fullName>
        <label>Coin Bag Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Bag_On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coin Bag On Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Status_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that last modified the collection status.</description>
        <inlineHelpText>The user that last modified the collection status.</inlineHelpText>
        <label>Collection Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Status_Last_Modified_Date__c</fullName>
        <description>The date/time the collection status was last modified.</description>
        <inlineHelpText>The date/time the collection status was last modified.</inlineHelpText>
        <label>Collection Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collection_Type__c</fullName>
        <description>Copied down from the parent Route Schedule Account.</description>
        <inlineHelpText>Copied down from the parent Route Schedule Account.</inlineHelpText>
        <label>Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collection_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collector_1__c</fullName>
        <description>FF to Collector 1 User Name</description>
        <formula>Route_Schedule__r.Collector_1__r.FirstName + &apos; &apos; + Route_Schedule__r.Collector_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Collector 1 User Name</inlineHelpText>
        <label>Collector 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collector_2__c</fullName>
        <description>FF To Route_Schedule__r.User__r.Name</description>
        <formula>Route_Schedule__r.User__r.FirstName + &apos; &apos; +  Route_Schedule__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Collector 2 UserName</inlineHelpText>
        <label>Collector 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collector_RT_Fields_Completed__c</fullName>
        <formula>/* These fields reflect those that are on the 
 * Collector - RPS - View Form.
 * This is used to assist on whether we want
 * To Set Route_Processing_Sheet.Redemption_Status__c 
 * To completed (this is a best guess at this point)
 *
 * ie. if any of these fields are not blank or not 0
 *     we can set the status to complete  
 */
/*  
---------&gt; @TODO I guess this is the wrong interpretation of the business rule. ie allow zeros? ok 
lets try again what ARE THE BUSINESS RULES?? GRRRRR
 OR( 
   AND(!ISBLANK(Cassette_1_Note_Count__c),Cassette_1_Note_Count__c != 0)
  ,AND(!ISBLANK(Cassette_5_Note_Count__c),Cassette_5_Note_Count__c != 0)
  ,AND(!ISBLANK(Cassette_20_Note_Count__c),Cassette_20_Note_Count__c != 0)
  ,AND(!ISBLANK(Cassette_100_Note_Count__c),Cassette_100_Note_Count__c != 0)
  ,AND(!ISBLANK(Reject_Total__c),Reject_Total__c != 0)
  ,AND(!ISBLANK(BV_Value__c),BV_Value__c != 0)
)
*/
/*
 OR( 
   !ISBLANK(Cassette_1_Note_Count__c)
  ,!ISBLANK(Cassette_5_Note_Count__c)
  ,!ISBLANK(Cassette_20_Note_Count__c)
  ,!ISBLANK(Cassette_100_Note_Count__c)
  ,!ISBLANK(Reject_Total__c)
  ,!ISBLANK(BV_Value__c)
)
*/
 IF(TEXT(Status__c) != &apos;Skipped&apos;, 
 IF( Redemption_Type_From_Asset__c = &apos;NRT&apos;, 
    AND( 
      !ISBLANK(Cassette_1_Note_Count__c)
      ,!ISBLANK(Cassette_2_Note_Count__c)
      ,!ISBLANK(Cassette_3_Note_Count__c)
      ,!ISBLANK(Cassette_4_Note_Count__c)
      ,!ISBLANK(BV_Value__c)
       ), 
     IF( Redemption_Type_From_Asset__c = &apos;M3T&apos;, 
        AND( 
      !ISBLANK(Cassette_1_Value__c)
      ,!ISBLANK(Cassette_2_Value__c)
      ,!ISBLANK(Cassette_3_Value__c)
      ,!ISBLANK(Cassette_1_Value__c)
      ,!ISBLANK(Cassette_5_Value__c)
       ),
        FALSE)
),TRUE)</formula>
        <label>Collector RT Fields Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collector_RT_Status_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that last modified the collector RT Status.</description>
        <inlineHelpText>The user that last modified the collector RT Status.</inlineHelpText>
        <label>Collector RT Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collector_RT_Status_Last_Modified_Date__c</fullName>
        <description>The Date/Time the collector RT Status was last modified.</description>
        <inlineHelpText>The Date/Time the collector RT Status was last modified.</inlineHelpText>
        <label>Collector RT Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CountRoom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Count Room</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Processing Sheets (Count Room)</relationshipLabel>
        <relationshipName>Route_Processing_Sheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crash_Bag_Number__c</fullName>
        <label>Crash Bag Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crash_Bag_On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crash Bag On Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_RT_Replenishment_Date__c</fullName>
        <description>POC For Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>End RT Replenishment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_RT_Replenishment_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POC for Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>End RT Replenishment User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_SheetsFxsQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_VGT_Collection_Date__c</fullName>
        <description>POC For Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>End VGT Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_VGT_Collection_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POC For Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>End VGT Collection User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enter_Total_Drop__c</fullName>
        <label>Enter Total Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Drop__c</fullName>
        <description>Calculations of current VGT meters minus previous meters aggregated total via DLRS</description>
        <label>VGT Expected Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Cassette_On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Cassette On Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fill_Type__c</fullName>
        <label>Fill Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Hand pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funds_In_Field__c</fullName>
        <label>Funds in the Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cassette</fullName>
                </value>
                <value>
                    <fullName>Coin Bag</fullName>
                </value>
                <value>
                    <fullName>Crash Bag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <label>Actual Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Account__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <formula>Account__r.IGB_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Funds_In_Field_Value__c</fullName>
        <description>FF to Account__r.Fund_in_Field__c</description>
        <formula>/*
 * Multi-Select picklists in Salesforce are not well supported. this is the only way to reference them 
 * in a function. If values are added / changed on Account.Funds_in_Field__c this needs to 
 * be modified as well!
 */
IF ( INCLUDES ( Account__r.Funds_in_Field__c , &quot;Crash Bag&quot; ), &quot;Crash Bag; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Funds_in_Field__c , &quot;NRT $20 Cassette&quot; ), &quot;NRT $20 Cassette; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Funds_in_Field__c , &quot;M3T Crash Bag&quot; ), &quot;M3T Crash Bag; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Funds_in_Field__c , &quot;Coin Bag&quot; ), &quot;Coin Bag; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Funds In Field Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M3T_Crash_Bag_Number__c</fullName>
        <label>M3T Crash Bag Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Processing_Complete__c</fullName>
        <formula>Total_Processing_Completed_Meter_Reading__c  &gt;=  Total_Meter_Readings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meter Processing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRT_20_Cassette_Number__c</fullName>
        <label>NRT $20 Cassette Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Text_Area__c</fullName>
        <description>This is field is populated from Notes__c. Rich Text / Long text fields are useless when it comes to Formula Fields. This will take the first 255 so we can properly evaluate that field. This is trigger maintained.</description>
        <inlineHelpText>This is field is populated from Notes__c. Rich Text / Long text fields are useless when it comes to Formula Fields. This will take the first 255 so we can properly evaluate that field. This is trigger maintained.</inlineHelpText>
        <label>Notes Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Stop_Number__c</fullName>
        <description>FF to Route_Schedule_Account__r.Stop_Number__c</description>
        <formula>Route_Schedule_Account__r.Stop_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The stop # associated with this location via route import or schedule creation (not modified by the collector)</inlineHelpText>
        <label>Original Stop Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Total__c</fullName>
        <formula>(Cassette_1_Note_Count_Outbound__c * 1) + ( Cassette_5_Note_Count_Outbound__c *5) + ( Cassette_20_Note_Count_Outbound__c *20) + ( Cassette_100_Note_Count_Outbound__c * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outbound Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outbound__c</fullName>
        <label>Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_RT_Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the last time this location had its RTs collected</description>
        <label>Previous RT Collection</label>
        <referenceTo>Route_Processing_Sheet__c</referenceTo>
        <relationshipLabel>Previous RT Collection</relationshipLabel>
        <relationshipName>Route_Processing_Sheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_VGT_Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the last time this location had its VGT cans collected</description>
        <label>Previous VGT Collection</label>
        <referenceTo>Route_Processing_Sheet__c</referenceTo>
        <relationshipLabel>Previous VGT Collection</relationshipLabel>
        <relationshipName>Route_Processing_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Location__c</fullName>
        <label>Processing Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Process_Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processing Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Process_Changed_Date__c</fullName>
        <description>The Date/Time the processing status was last modified.</description>
        <inlineHelpText>The Date/Time the processing status was last modified.</inlineHelpText>
        <label>Processing Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Process_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing Incomplete</fullName>
                    <default>true</default>
                    <label>Processing Incomplete</label>
                </value>
                <value>
                    <fullName>COMPLETED PROCESSING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Status_Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fill Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Status_Changed_Date__c</fullName>
        <description>The date/time the fill status was last modified.</description>
        <inlineHelpText>The date/time the fill status was last modified.</inlineHelpText>
        <label>Fill Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <description>More processor based since reqs differed between the status for a collector and the status for a processor.</description>
        <inlineHelpText>More processor based since reqs differed between the status for a collector and the status for a processor.</inlineHelpText>
        <label>Fill Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COMPLETED FILL</fullName>
                </value>
                <value>
                    <fullName>Not Yet Filled</fullName>
                    <default>true</default>
                    <label>Not Yet Filled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processor_RT_Status_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that last modified the processor RT Status.</description>
        <inlineHelpText>The User that last modified the processor RT Status.</inlineHelpText>
        <label>Processor RT Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processor_RT_Status_Last_Modified_Date__c</fullName>
        <description>The Date/Time the processor RT Status was last modified.</description>
        <inlineHelpText>The Date/Time the processor RT Status was last modified.</inlineHelpText>
        <label>Processor RT Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processor_RT_Status__c</fullName>
        <label>Processor RT Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_Last_Modified__c</fullName>
        <description>The date/time that any one of the questions were last modified in the front end UI by the user.</description>
        <inlineHelpText>The date/time that any one of the questions were last modified in the front end UI by the user.</inlineHelpText>
        <label>Questions Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT_Incoming_Total__c</fullName>
        <formula>RT_Total_Drop__c + Reject_Drop_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT Incoming Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RT_Reconciliation_Notes__c</fullName>
        <label>RT Reconciliation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT_Reconciliation_Status__c</fullName>
        <label>RT Reconciliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Collector Error - Counts Enterered Incorrectly</fullName>
                    <isActive>false</isActive>
                    <label>Collector Error - Counts Enterered Incorrectly</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Processing Error - Cassettes Swapped</fullName>
                    <isActive>false</isActive>
                    <label>Processing Error - Cassettes Swapped</label>
                </value>
                <value>
                    <fullName>Rejects Not Brought Back</fullName>
                    <isActive>false</isActive>
                    <label>Rejects Not Brought Back</label>
                </value>
                <value>
                    <fullName>Used Back Office Totals</fullName>
                    <isActive>false</isActive>
                    <label>Used Back Office Totals</label>
                </value>
                <value>
                    <fullName>e-fill</fullName>
                    <isActive>false</isActive>
                    <label>e-fill</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_Total_Drop__c</fullName>
        <formula>Cassette_1_Drop_Total__c +  Cassette_5_Drop_Total__c +  Cassette_20_Drop_Total__c + Cassette_50_Drop_Total__c +  Cassette_100_Drop_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT Total Drop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RT_Unit_ID__c</fullName>
        <formula>Redemption_Asset__r.Unit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT Unit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Variance_Reason__c</fullName>
        <label>RT Variance Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>e-fill</fullName>
                </value>
                <value>
                    <fullName>Processing Error - Cassettes Swapped</fullName>
                </value>
                <value>
                    <fullName>Collector Error - Counts Enterered Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Rejects Not Brought Back</fullName>
                </value>
                <value>
                    <fullName>Used Back Office Totals</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_Variance__c</fullName>
        <description>Formula: Drop Totals - Receipt Totals, both NRT specific fields and M3T specific fields are included in the formula so they should never both be filled out for a location or this formula would subtract twice</description>
        <formula>((Cassette_1_Note_Count_Drop__c)*1 + (Cassette_5_Note_Count_Drop__c)*5 + (Cassette_20_Note_Count_Drop__c)*20 + (Cassette_50_Note_Count_Drop__c)*50 +(Cassette_100_Note_Count_Drop__c)*100) + Reject_Drop_Total__c + Cash_Return_Unused_Drop__c - (( BLANKVALUE(VALUE(TEXT(Cassette_1_Denomination__c)),0) *  (Cassette_1_Note_Count__c + Cassette_1_Reject_Note_Count__c)) + ( BLANKVALUE(VALUE(TEXT(Cassette_2_Denomination__c)),0) *  (Cassette_2_Note_Count__c + Cassette_2_Reject_Note_Count__c) ) + ( BLANKVALUE(VALUE(TEXT(Cassette_3_Denomination__c)),0) *  (Cassette_3_Note_Count__c + Cassette_3_Reject_Note_Count__c)) + ( BLANKVALUE(VALUE(TEXT(Cassette_4_Denomination__c)),0)*(Cassette_4_Note_Count__c + Cassette_4_Reject_Note_Count__c) )) -  ((Cassette_1_Value__c + Cassette_2_Value__c + Cassette_3_Value__c + Cassette_4_Value__c + Cassette_5_Value__c + Reject_Total__c + Cash_Return_Unused__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reconciled__c</fullName>
        <label>Reconciled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>